# augur-hakesch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TIME_VALUES_ROUTING_METHOD.md  Taskfile.yml  changelog.md  docker-compose.keycloak.yml  docker-compose.server.yml  docker-compose.yml  import_db.py  nam_results.csv  package-lock.json  pyproject.toml  update_version.py
.github/workflows/: augur-build.yml  augur-dev-build.yml  augur-production-build.yml
api/: Dockerfile  main.py  requirements.txt  teileinzugsgebiete.py
docs/: CurveNumbers.md  NAM.md  README.md  RoutingAndPreprocessing.md  SystemOverview.md
frontend/: Dockerfile  package-lock.json  package.json  readme.md  vite.config.js
frontend/src/: index.html  main.js
openlayers-view/: vite.config.js
openlayers-view/src/: index.html  style.css
project/: worker.py
scripts/: batch_nam_calculations.py  compare.csv  dbimport.csv  import_data.py  nam_results.csv  plot_compare.py
src/: Dockerfile
src/api/: .dockerignore  .env  Dockerfile  batch_nam_calculations.py  import_data.py  main.py  nam_results.csv  requirements.txt  version.py
src/api/calculations/: calculations.py  catchment.py  curvenumbers.py  discharge.py  hakesch.py  hydrocalc.py  isozone_direct.py  isozones.py  nam.py  orchestration.py  support_notifications.py  (+1 more)
src/frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
src/frontend-static/: Dockerfile  gulpfile.js  package-lock.json
src/monitor/: .dockerignore  .env.example  Dockerfile  README.md  monitor.py
(+255 files in other folders)
