[project]
name = "augur.world"
version = "1.1.0-alpha.3"

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "./src/api/version.py:__version__",
    "./src/frontend/src/routes/+layout.server.ts:version"
]
tag_format = "${version}"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
